--- a/Croatian/main/DeskClock.apk/res/values-hr/strings.xml
+++ b/Croatian/main/DeskClock.apk/res/values-hr/strings.xml
@@ -27,6 +27,10 @@
   <string name="abc_shareactionprovider_share_with">Dijeljenje sa</string>
   <string name="abc_shareactionprovider_share_with_application">Dijeli putem aplikacije %s</string>
   <string name="abc_toolbar_collapse_description">Sažmi</string>
+  <string name="accessibility_sliding_button_state_description_off">Isključeno</string>
+  <string name="accessibility_sliding_button_state_description_on">Uključeno</string>
+  <string name="accessibility_tab_state_description_unselect">Nije odabrano</string>
+  <string name="accessibility_tab_statedesc_unselect">Nije odabrano</string>
   <string name="actionbar_button_up_description">Natrag</string>
   <string name="add_alarm">Dodaj alarm</string>
   <string name="add_clock">Dodaj sat</string>
@@ -100,6 +104,13 @@
   <string name="bottomsheet_action_expand">Proširi donji list</string>
   <string name="bottomsheet_drag_handle_clicked">Ručka za povlačenje dvaput dodirnuta</string>
   <string name="bottomsheet_drag_handle_content_description">Ručka za povlačenje</string>
+  <string name="call_notification_answer_action">Odgovori</string>
+  <string name="call_notification_answer_video_action">Videozapis</string>
+  <string name="call_notification_decline_action">Odbij</string>
+  <string name="call_notification_hang_up_action">Prekini</string>
+  <string name="call_notification_incoming_text">Dolazni poziv</string>
+  <string name="call_notification_ongoing_text">Poziv u tijeku</string>
+  <string name="call_notification_screening_text">Filtriranje dolaznog poziva</string>
   <string name="cancel">Odustani</string>
   <string name="channel_name_alarm">Alarm</string>
   <string name="channel_name_sleep">Spavanje</string>
@@ -142,6 +153,7 @@
   <string name="edit_systemtime">Uredi vrijeme sustava</string>
   <string name="enter_label">Unesite oznaku</string>
   <string name="error_icon_content_description">Pogreška</string>
+  <string name="error_a11y_label">Pogreška: nevažeće</string>
   <string name="every_day">Dnevno</string>
   <string name="expand_button_title">Napredno</string>
   <string name="expired_timers_dismissed">Timer je odbačen</string>
@@ -203,19 +215,27 @@
   <string name="locked_show_arriving_alarm_title">Prikaži alarme na zaključanom zaslonu</string>
   <string name="look_sleep_data">Prikaz podataka o spavanju</string>
   <string name="material_clock_toggle_content_description">Odaberite prijepodne ili poslijepodne</string>
+  <string name="material_hour_24h_suffix">%1$s sati</string>
   <string name="material_hour_selection">Odaberite sat</string>
-  <string name="material_hour_suffix">%1$s h</string>
+  <string name="material_hour_suffix">%1$s s</string>
   <string name="material_minute_selection">Odaberite minute</string>
   <string name="material_minute_suffix">%1$s min</string>
-  <string name="material_slider_range_end">Kraj raspona,</string>
-  <string name="material_slider_range_start">Početak raspona,</string>
+  <string name="material_slider_range_end">Kraj raspona</string>
+  <string name="material_slider_range_start">Početak raspona</string>
+  <string name="material_slider_value">Vrijednost</string>
   <string name="material_timepicker_clock_mode_description">Prebacite se na način rada sata za unos vremena.</string>
   <string name="material_timepicker_hour">Sat</string>
   <string name="material_timepicker_minute">Minuta</string>
   <string name="material_timepicker_select_time">Odaberite vrijeme</string>
   <string name="material_timepicker_text_input_mode_description">Prebacite se na način unosa teksta za unos vremena.</string>
   <string name="miuix_access_state_desc">Odabrano</string>
+  <string name="miuix_accessibility_title">Naslov</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
+  <string name="miuix_appcompat_accessibility_collapse_state">Sažeto</string>
+  <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
+  <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Izađi iz načina uređivanja</string>
+  <string name="miuix_appcompat_accessibility_new_message">Nova obavijest</string>
+  <string name="miuix_appcompat_accessibility_start_edit_action_mode">Uđi u način uređivanja</string>
   <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_action_mode_title_empty">Odaberi stavke</string>
@@ -232,14 +252,29 @@
   <string name="miuix_appcompat_select_all_description">Odaberi sve</string>
   <string name="miuix_appcompat_select_item">Odaberi stavke</string>
   <string name="miuix_appcompat_show_dialog_description">Skočni prozor</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_close">Povucite prema dolje za zatvaranje</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_half_screen">Povucite prstom prema dolje za prebacivanje na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_minimized">Povucite prema dolje za minimiziranje</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_half_screen">Povucite prstom prema gore za prebacivanje na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_maximized">Povucite prstom prema gore za maksimiziranje</string>
+  <string name="miuix_bottom_sheet_accessibility_state_half_screen">Pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_state_maximized">Maksimizirano</string>
+  <string name="miuix_bottom_sheet_accessibility_state_minimized">Minimizirano</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_half_screen">Prebaci na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_maximized">Maksimiziraj</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_minimized">Minimiziraj</string>
   <string name="miuix_indexer_collect">Zbirke</string>
-  <string name="miuix_indexer_selected">Odabrano %s</string>
+  <string name="miuix_item_view_accessibility_unselected">Nije odabrano</string>
   <string name="miuix_item_view_role_description">Kartica</string>
   <string name="miuix_navigator_category_group_collapse">Sažmi</string>
+  <string name="miuix_navigator_category_group_collapsed">Sažeto</string>
   <string name="miuix_navigator_category_group_expand">Proširi</string>
+  <string name="miuix_navigator_category_group_expanded">Prošireno</string>
   <string name="miuix_navigator_content_switch_description">Prikaži bočnu traku</string>
   <string name="miuix_navigator_multiple_choice">Odaberi</string>
   <string name="miuix_navigator_navigator_switch_description">Sakrij bočnu traku</string>
+  <string name="miuix_navigator_toolbar_screen_bottom">Alatna traka na dnu zaslona</string>
+  <string name="miuix_progressbar_loading">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_pull_to_refresh">Povuci za osvježiti</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshed">Gotovo</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshing">Osvježavanje</string>
@@ -249,6 +284,9 @@
   <string name="miuix_sbl_tracking_progress_labe_up_refresh">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh_fail">"Ne mogu učitati stavke"</string>
   <string name="miuix_popup_window_default_title">Skočni prozor</string>
+  <string name="miuix_show_password">Prikaži zaporku</string>
+  <string name="miuix_stretchablewidget_collapsed">Sažeto</string>
+  <string name="miuix_stretchablewidget_expanded">Prošireno</string>
   <string name="modify_alarm">Uredi alarm</string>
   <string name="module_dialog_negative">"Ne prihvaćam"</string>
   <string name="module_dialog_positive">Prihvaćam</string>
@@ -327,14 +365,18 @@
   <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
   <string name="mtrl_picker_a11y_next_month">Promijeni na sljedeći mjesec</string>
   <string name="mtrl_picker_a11y_prev_month">Promijeni na prethodni mjesec</string>
+  <string name="mtrl_picker_announce_current_range_selection">Odabir datuma početka: %1$s – Odabir datuma završetka: %2$s</string>
   <string name="mtrl_picker_announce_current_selection">Trenutni izbor: %1$s</string>
+  <string name="mtrl_picker_cancel">Odustani</string>
+  <string name="mtrl_picker_confirm">U redu</string>
   <string name="mtrl_picker_date_header_title">Odaberite datum</string>
   <string name="mtrl_picker_date_header_unselected">Odaberite datum</string>
   <string name="mtrl_picker_day_of_week_column_header">Kolona dana: %1$s</string>
   <string name="mtrl_picker_invalid_format">Pogrešan format.</string>
-  <string name="mtrl_picker_invalid_format_example">Primjer: %1$s</string>
   <string name="mtrl_picker_invalid_format_use">Koristi: %1$s</string>
   <string name="mtrl_picker_invalid_range">Pogrešan raspon.</string>
+  <string name="mtrl_picker_navigate_to_current_year_description">Navigacija do tekuće godine %1$d</string>
+  <string name="mtrl_picker_invalid_format_example">Primjer: %1$s</string>
   <string name="mtrl_picker_navigate_to_year_description">Navigacija do godine %1$s</string>
   <string name="mtrl_picker_out_of_range">Izvan raspona: %1$s</string>
   <string name="mtrl_picker_range_header_only_end_selected">Datum početka – %1$s</string>
@@ -343,17 +385,21 @@
   <string name="mtrl_picker_range_header_title">Odaberite raspon datuma</string>
   <string name="mtrl_picker_range_header_unselected">Datum početka - Datum završetka</string>
   <string name="mtrl_picker_save">Spremi</string>
+  <string name="mtrl_picker_start_date_description">Datum početka %1$s</string>
   <string name="mtrl_picker_text_input_date_hint">Datum</string>
   <string name="mtrl_picker_text_input_date_range_end_hint">Datum završetka</string>
   <string name="mtrl_picker_text_input_date_range_start_hint">Datum početka</string>
   <string name="mtrl_picker_text_input_day_abbr">d</string>
   <string name="mtrl_picker_text_input_month_abbr">m</string>
   <string name="mtrl_picker_text_input_year_abbr">g</string>
+  <string name="mtrl_picker_today_description">Danas %1$s</string>
   <string name="mtrl_picker_toggle_to_calendar_input_mode">Prebacite se na način unosa kalendara</string>
   <string name="mtrl_picker_toggle_to_day_selection">Dodirnite za prelazak na odabir dana</string>
   <string name="mtrl_picker_toggle_to_text_input_mode">Prebacite se na način unosa teksta</string>
   <string name="mtrl_picker_toggle_to_year_selection">Dodirnite za prelazak na odabir godine</string>
-  <string name="net_permission_cancel">"Odbijam"</string>
+  <string name="mtrl_timepicker_cancel">Odustani</string>
+  <string name="mtrl_timepicker_confirm">U redu</string>
+  <string name="net_permission_cancel">Odbijam</string>
   <string name="net_permission_ok">Prihvaćam</string>
   <string name="network_privacy"><Data>Kako bi dobio relevantne informacije o lokalnim državnim praznicima i prilagodio alarme, Sat se mora povezati s internetom. Prije korištenja Sata također morate pročitati i prihvatiti naše &lt;a href=\"%2$s\">Korisnički ugovor&lt;/a> i &lt;a href=\"%3$s\">Pravila o privatnosti&lt;/a>. Prihvaćate?</Data></string>
   <string name="network_privacy_global"><Data>Kako bi pružio personalizirane usluge, Sat se mora povezati s internetom. Prije korištenja Sata također morate pročitati i prihvatiti naše &lt;a href=\"%2$s\">Korisnički ugovor&lt;/a> i &lt;a href=\"%3$s\">Pravila o privatnosti&lt;/a>. Prihvaćate?</Data></string>
@@ -407,6 +453,8 @@
   <string name="saturday_short">Sub</string>
   <string name="saturday_shortest">S</string>
   <string name="search_menu_title">Traži</string>
+  <string name="searchview_clear_text_content_description">Izbriši tekst</string>
+  <string name="searchview_navigation_content_description">Natrag</string>
   <string name="select_operation">Odaberi</string>
   <string name="selected">Odabrano</string>
   <string name="send">Pošalji</string>
@@ -425,6 +473,7 @@
   <string name="shutdown_alarm_alert_enable_summary_new">Uključite da se aktiviraju postavljeni alarmi kada je uređaj isključen. Isključit će se samo alarmi postavljeni na najmanje %d min. nakon isključivanja uređaja.</string>
   <string name="shutdown_alarm_alert_title">Isključi alarm</string>
   <string name="shutdown_alarm_disable_summary">"Alarm se neće isključiti nakon što se uređaj isključi"</string>
+  <string name="side_sheet_accessibility_pane_title">Bočni list</string>
   <string name="silent_alarm_summary">Bešumno</string>
   <string name="skip_alarm_date_format">%1$s (%2$s)</string>
   <string name="skip_alarm_once_hint">Isključi jednom na %s</string>
@@ -463,6 +512,7 @@
   <string name="sunday_shortest">N</string>
   <string name="system_permission_agree_desc">Dopustite ovoj aplikaciji da se poveže s internetom da biste pristupili svim njenim značajkama.</string>
   <string name="system_permission_main_purpose">Vrijeme pregledavanja, postavljanje alarma i timera, štoperica</string>
+  <string name="text_input_layout_default_error">Ovo je zadana pogreška</string>
   <string name="thursday">Četvrtak</string>
   <string name="thursday_short">Čet</string>
   <string name="thursday_shortest">Č</string>
