--- a/Croatian/main/EsimLPA.apk/res/values-hr/strings.xml
+++ b/Croatian/main/EsimLPA.apk/res/values-hr/strings.xml
@@ -28,7 +28,11 @@
   <string name="abc_shareactionprovider_share_with">Dijeli s</string>
   <string name="abc_shareactionprovider_share_with_application">Dijeli putem aplikacije %s</string>
   <string name="abc_toolbar_collapse_description">Sažmi</string>
-	 <string name="accept_button">Prihvaćam</string>
+  <string name="accept_button">Prihvaćam</string>
+  <string name="accessibility_sliding_button_state_description_off">Isključeno</string>
+  <string name="accessibility_sliding_button_state_description_on">Uključeno</string>
+  <string name="accessibility_tab_state_description_unselect">Nije odabrano</string>
+  <string name="accessibility_tab_statedesc_unselect">Nije odabrano</string>
   <string name="action_settings">Postavke</string>
   <string name="actionbar_button_up_description">Natrag</string>
   <string name="active_btn_manual">Dodajte aktivacijski kod ručno</string>
@@ -304,7 +308,12 @@ Kod razloga: %3$s"</string>
   <string name="manual">Koristite aktivacijski kod</string>
   <string name="miuix_access_state_desc">Odabrano</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
-  <string name="miuix_appcompat_action_mode_deselect_all">Poništiti sve</string>
+  <string name="miuix_appcompat_accessibility_collapse_state">Sažeto</string>
+  <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
+  <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Izađi iz načina uređivanja</string>
+  <string name="miuix_appcompat_accessibility_new_message">Nova obavijest</string>
+  <string name="miuix_appcompat_accessibility_start_edit_action_mode">Uđi u način uređivanja</string>
+  <string name="miuix_appcompat_action_mode_deselect_all">Poništi sve</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_action_mode_title_empty">Odaberi</string>
   <string name="miuix_appcompat_actionbar_immersion_button_more_description">Više</string>
@@ -319,8 +328,9 @@ Kod razloga: %3$s"</string>
   <string name="miuix_appcompat_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_select_all_description">Odaberi sve</string>
   <string name="miuix_appcompat_select_item">Odaberi stavke</string>
+  <string name="miuix_appcompat_show_dialog_description">Skočni prozor</string>
   <string name="miuix_indexer_collect">Zbirke</string>
-  <string name="miuix_indexer_selected">Odabrano %s</string>
+  <string name="miuix_progressbar_loading">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_pull_to_refresh">Povucite dolje za osvježavanje</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshed">Uspješno osvježeno</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshing">Osvježavanje…</string>
@@ -329,6 +339,9 @@ Kod razloga: %3$s"</string>
   <string name="miuix_sbl_tracking_progress_labe_up_none">To je sve za sada</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh_fail">Ne može učitati stavke</string>
+  <string name="miuix_show_password">Prikaži zaporku</string>
+  <string name="miuix_stretchablewidget_collapsed">Sažeto</string>
+  <string name="miuix_stretchablewidget_expanded">Prošireno</string>
   <string name="monday">Ponedjeljak</string>
   <string name="monday_short">Pon</string>
   <string name="monday_shortest">Pon</string>
@@ -412,6 +425,8 @@ Kod razloga: %3$s"</string>
   <string name="progress_secondary_message">Molimo vas da ne isključujete uređaj dok je ažuriranje u tijeku</string>
   <string name="progress_text">Ažuriranje pretplate</string>
   <string name="provider">Operater</string>
+  <string name="qr_torch_state_off_talkback">Isključeno</string> 
+  <string name="qr_torch_state_on_talkback">Uključeno</string>
   <string name="quickstart_setup_activate_esim">Pokrenite eSIM</string>
   <string name="quickstart_setup_back">Natrag</string>
   <string name="quickstart_setup_skip">Preskoči</string>
@@ -470,7 +485,7 @@ Kod razloga: %3$s"</string>
   <string name="toast_not_disable_abide_ppr1">Ovaj eSIM se ne može onemogućiti zbog ograničenja operatera</string>
   <string name="toast_not_switch_abide_ppr1">Nije moguće omogućiti. Već koristite eSIM na ovom uređaju koji podliježe ograničenjima mobilnog operatera.</string>
   <string name="toast_reset_esim_failed">Nije moguće ponovno postaviti eSIM. Pričekajte minutu ili dvije i pokušajte ponovo.</string>
-  <string name="toast_scan_qr_error">Nije moguće skenirati QR kod. Provjerite i pokušajte ponovno.</string>
+  <string name="toast_scan_qr_error">"Nije moguće skenirati ovaj QR kod. Kontaktirajte svog operatera za detalje."</string>
   <string name="toast_service_timeout">Zahtijevano vrijeme je isteklo. Pričekajte trenutak ili dva i pokušajte ponovo.</string>
   <string name="toast_set_nickname_fail">Promjena nadimka nije moguća. Pričekajte trenutak ili dva i pokušajte ponovo.</string>
   <string name="toast_use_mobile_data_warning">Sada koristite mobilne podatke. To može dovesti do dodatnih naknada.</string>
